# f1-lap-attribution

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Notes.md  README.md  dashboard.py  pyproject.toml  requirements.txt
config/: default.yaml  experiments_italy_q.yaml  run_italy_q.yaml  runs.yaml
docs/: ARCHITECTURE.md  PIPELINE.md
examples/: batch_summary_ranked_example.csv
reports/: fuel_demo_attribution_v2.csv  fuel_demo_summary.txt  monza_2023q_attribution_v2_ver_vs_lec.csv  monza_2023q_attribution_ver_vs_lec.csv  monza_2023q_ver_segments.csv
src/: config.py
src/analysis/: corner_detection.py  segment_summary.py  validate_physics_metrics.py
src/cli/: batch_compare.py  run_experiments.py  run_from_config.py  run_many_configs.py  run_pipeline.py
src/data/: fastf1_utils.py  pull_fastf1_pair.py  pull_fastf1_sample.py
src/reports/: attribution_table.py  plot_attribution_bars.py  plot_delta_time.py  plot_delta_with_segments.py  print_braking_zones.py  segments_table.py
src/telemetry/: attribution.py  delta.py  delta_trace.py  fuel.py  fuel_curve.py  phases.py  physics.py  resample.py  segments.py
tests/: conftest.py  test_attribution.py  test_batch_pairs.py  test_corner_detection.py  test_delta_trace.py  test_export_comparison_table.py  test_fuel.py  test_fuel_curve.py  test_html_index.py  test_html_report.py  test_phases.py  test_physics.py  test_resample.py  test_run_experiments.py  test_run_from_config.py  test_run_many_configs.py  test_segment_summary.py  test_segments.py  test_validate_physics_metrics.py
